--- a/css/media-query.css
+++ b/css/media-query.css
@@ -80,4 +80,13 @@
     flex-direction: column;
     gap: 20px;
   }
+  .newsletter-container {
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+  }
+  .newsletter-form {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
